# mini-wasm

./: Cargo.toml  README.md
src/: binary.rs  execution.rs  main.rs
src/binary/: module.rs  types.rs
src/execution/: runtime.rs  store.rs  value.rs  wasi.rs
src/fixtures/: func_add.wat  func_call.wat  func_local.wat
